--- a/theme/bootstrapbase/less/bootstrap/navbar.less
+++ b/theme/bootstrapbase/less/bootstrap/navbar.less
@@ -196,8 +196,7 @@
 .navbar-static-top .container,
 .navbar-fixed-top .container,
 .navbar-fixed-bottom .container {
-// This is a Moodle hack - please see less/bootstrap/mixins.less#L593.
-  width: (@gridColumnWidth * @gridColumns) + (@gridGutterWidth * (@gridColumns - 1));
+  #grid > .core > .span(@gridColumns);
 }
 
 // Fixed to top
