Added some placeholder polymer elements

--- a/lib/templates/form_test.mustache
+++ b/lib/templates/form_test.mustache
@@ -30,12 +30,15 @@
     Example context (json):
     {}
 }}
+<link href="poly-editor.html" rel="import">
+
 <form name="test-form">
     <input name="test1" value="dfsd" data-mdl-is="input"></input>
     <input name="test2" data-mdl-is="input_repeat"></input>
     <mdl-input name="test5"></mdl-input>
     <mdl-input-repeat name="test3"></mdl-input-repeat>
     <mdl-input-repeat name="test4"></mdl-input-repeat>
+    <poly-editor name="server-rendered"></poly-editor>
 </form>
 <br/>
 <br/>
