--- a/mod/lti/templates/tool_card.mustache
+++ b/mod/lti/templates/tool_card.mustache
@@ -81,10 +81,10 @@
             {{/state.pending}}
             {{^state.pending}}
                 {{#instancecount}}
-                    <p>This type is being used {{instancecount}} times</p>
+                    <p>This tool is being used {{instancecount}} times</p>
                 {{/instancecount}}
                 {{^instancecount}}
-                    <p>This type has not yet been used</p>
+                    <p>This tool has not yet been used</p>
                 {{/instancecount}}
             {{/state.pending}}
         </div>
